apps/external-apps/gotenburg/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gotenburg
  namespace: external-apps
spec:
  type: ExternalName
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  externalName: 10.69.1.52
