apps/external-apps/gotenburg/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gotenburg
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-local
spec:
  entryPoints:
    - websecure
  tls:
    secretName: local-cvsickle-com-tls
  routes:
    - match: Host(`gotenburg.local.cvsickle.com`)
      kind: Rule
      services:
        - name: gotenburg
          namespace: external-apps
          port: 3000
